# Crypto-Command-Centerzip

./: .env.example  .gitignore  .replit  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md
execution-core/: Dockerfile  requirements.txt
execution-core/app/: config.py  main.py
execution-core/app/adapters/: base.py  bitget_adapter.py  btcc_adapter.py
execution-core/app/middleware/: auth.py
execution-core/app/models/: audit_log.py  paper_account.py  signal_store.py
execution-core/app/routers/: account.py  audit.py  guardian_relay.py  health.py  orders.py  positions.py  price_feed.py  settings.py  signals.py
execution-core/app/services/: redis_broker.py
frontend/: next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/education/: page.tsx
frontend/src/app/partners/: page.tsx
frontend/src/components/trading/: SignalFeed.tsx
frontend/src/components/ui/: Sidebar.tsx  StatCard.tsx
guardian-bot/: requirements.txt
guardian-bot/app/: main.py
guardian-bot/app/services/: guardian.py
infra/migrations/: 001_init_schema.sql
infra/scripts/: start_services.sh  testnet_validate.sh
prediction-bot/: requirements.txt
prediction-bot/app/: main.py
prediction-bot/app/services/: signal_generator.py
src/app/: globals.css
src/app/auth/: page.tsx
src/app/command-center/: page.tsx
src/app/dashboard/: page.tsx
src/app/settings/: page.tsx
src/components/charts/: EquityChart.tsx
src/components/trading/: GuardianStatus.tsx  PositionsTable.tsx
(+10 files in other folders)
